fixed header image on small screens. added animation to nav a on hover

--- a/css/index.css
+++ b/css/index.css
@@ -196,6 +196,12 @@ nav.top-nav .links a {
   text-decoration: none;
   margin: 2%;
 }
+nav.top-nav .links a:hover {
+  transform: skewY(20deg);
+  font-size: 2.8rem;
+  font-weight: bold;
+  color: #FF8C00;
+}
 @media ( max-width: 500px ) {
   nav.top-nav .links a {
     font-size: 1.2rem;
@@ -216,6 +222,12 @@ footer {
 }
 .home .intro p {
   padding: 0 15px;
+}
+@media ( max-width: 500px ) {
+  .home .header-img img {
+    max-width: 95%;
+    margin: 2%;
+  }
 }
 .home .space-images {
   display: flex;
@@ -246,6 +258,12 @@ footer {
 }
 .home .walk .walk-text {
   width: 50%;
+}
+@media ( max-width: 500px ) {
+  .home .walk .walk-text {
+    order: 2;
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -313,9 +331,5 @@ footer {
   }
   section.space-images img.blast {
     width: 100%;
-  }
-  .walk-text {
-    order: 2;
-    width: 100% !important;
   }
 }
