--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,6 +14,13 @@
   
   }
 
+  .header-img img{
+    @media @phone{
+      max-width:95%;
+      margin: 2%;
+    }
+  }
+
   .space-images {
     display: flex;
     flex-wrap: wrap;
@@ -51,6 +58,11 @@
 
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        order:2;
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -125,12 +137,6 @@
 
   section.space-images img.blast{
     width: 100%;
-  }
-
-  
-  .walk-text{
-    order:2;
-    width: 100% !important; 
   }
 
 }// end @phone
