--- a/less/navigation.less
+++ b/less/navigation.less
@@ -31,6 +31,14 @@ nav.top-nav{
       text-decoration: none;
       margin: 2%;
 
+      &:hover{
+        transform: skewY(20deg);
+        font-size:2.8rem;
+        font-weight: bold;
+        color: @accent-1;
+      }
+
+
      @media @phone{
        font-size: 1.2rem;
      }
